--- a/products.yaml
+++ b/products.yaml
@@ -9,5 +9,5 @@ position: "after"
 target: "body"
 element: "<footer>Footer Content</footer>"
 - type: alter
-oldValue: "A"
-newValue: "B"
+oldValue: "Machine Learning"
+newValue: "products"
